# financemanager

./: .gitignore  .gitmessage.txt  Dockerfile  Readme.md  pyproject.toml  test.sh
.github/ISSUE_TEMPLATE/: feature.md  버그-리포트.md
.github/workflows/: checks.yml
accounts/: email.py  tests.py
app/: manage.py
app/accounts/: serializers.py  tests.py  views.py
app/config/settings/: base.py  prod.py
app/config/urls/: base.py  urls_dev.py
app/finance/: admin.py  constants.py  filters.py  models.py  serializers.py  urls.py  views.py
app/finance/tests/: tests_models.py
config/settings/: base.py
config/urls/: base.py  urls_dev.py  urls_prod.py
core/management/commands/: wait_for_db.py
finance/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  validator.py  views.py
finance/migrations/: 0001_initial.py  0002_alter_account_account_type_alter_account_bank_code_and_more.py  0003_alter_customuser_email.py
scripts/: run.sh
