[tool.poetry]
name = "django-mini-project"
version = "0.1.0"
description = "A minimal Django project setup"
authors = ["Your Name <you@example.com>"]
package-mode = false  # 패키지 모드 비활성화

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
djangorestframework = "^3.12"
drf-yasg = "^1.21.9"
psycopg2-binary = "^2.9.10"
django-environ = "^0.12.0"

[tool.poetry.group.dev.dependencies]
drf-yasg = "^1.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
